# gogol

./: .envrc  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTORS  Makefile  README.md  WORKSPACE  cabal.project  default-develop.nix  flake.nix  shell.nix  stack-7.10.2.yaml  stack-7.10.3.yaml  stack-7.8.4.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.10.4.yaml  stack-8.10.7.yaml  stack-8.2.2.yaml  stack-8.2.yaml  stack-8.4.4.yaml  stack-8.6.3.yaml  stack-8.6.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.2.yaml  stack-9.10.1.yaml  stack-9.2.2.yaml  stack-9.6.5.yaml  stack-9.6.6.yaml  stack-9.8.2.yaml  stack-9.8.4.yaml  stack-ghc966.yaml  stack-ghc984.yaml  stack.yaml  treefmt.nix
core/: README.md  gogol-core.cabal  gozen-core.cabal
core/src/Gogol/: Prelude.hs
core/src/Gogol/Data/: Base64.hs  Time.hs
core/src/Network/Google/: Client.hs  Prelude.hs  Types.hs
core/src/Network/Google/Data/: Base64.hs  Bytes.hs  JSON.hs  Numeric.hs  Time.hs
core/test/: Main.hs
examples/: README.md  gogol-examples.cabal
examples/src/Example/: Compute.hs  Sheets.hs  Storage.hs  Tutorial.lhs
gogol-abusiveexperiencereport/: README.md  gogol-abusiveexperiencereport.cabal
gogol-acceleratedmobilepageurl/: README.md  gogol-acceleratedmobilepageurl.cabal
gogol-accessapproval/: README.md  gogol-accessapproval.cabal
gogol-accesscontextmanager/: README.md  gogol-accesscontextmanager.cabal
gogol-adexchange-buyer/: README.md  gogol-adexchange-buyer.cabal
gogol-adexchange-seller/: README.md  gogol-adexchange-seller.cabal
gogol-adexchangebuyer2/: README.md  gogol-adexchangebuyer2.cabal
gogol-adexperiencereport/: README.md  gogol-adexperiencereport.cabal
gogol-admin/: README.md  gogol-admin.cabal
gogol-admin-datatransfer/: README.md  gogol-admin-datatransfer.cabal
gogol-admin-directory/: README.md  gogol-admin-directory.cabal
gogol-admin-emailmigration/: README.md  gogol-admin-emailmigration.cabal
gogol-admin-reports/: README.md  gogol-admin-reports.cabal
gogol-adsense/: README.md  gogol-adsense.cabal
gogol-adsense-host/: README.md  gogol-adsense-host.cabal
gogol-affiliatenetwork/: README.md  gogol-affiliatenetwork.cabal
gogol-affiliates/: README.md  gogol-affiliates.cabal
gogol-alertcenter/: README.md  gogol-alertcenter.cabal
gogol-analytics/: README.md  gogol-analytics.cabal
gogol-analyticsreporting/: README.md  gogol-analyticsreporting.cabal
gogol-android-enterprise/: README.md  gogol-android-enterprise.cabal
gogol-android-publisher/: README.md  gogol-android-publisher.cabal
gogol-androiddeviceprovisioning/: README.md  gogol-androiddeviceprovisioning.cabal
gogol-androidmanagement/: README.md  gogol-androidmanagement.cabal
gogol-appengine/: README.md  gogol-appengine.cabal
gogol-appengine-taskqueue/: README.md  gogol-appengine-taskqueue.cabal
gogol-apps-activity/: README.md  gogol-apps-activity.cabal
gogol-apps-calendar/: README.md  gogol-apps-calendar.cabal
gogol-apps-licensing/: README.md  gogol-apps-licensing.cabal
gogol-apps-reseller/: README.md  gogol-apps-reseller.cabal
gogol-apps-tasks/: README.md  gogol-apps-tasks.cabal
gogol-appsactivity/: README.md  gogol-appsactivity.cabal
gogol-appstate/: README.md  gogol-appstate.cabal
gogol-autoscaler/: README.md  gogol-autoscaler.cabal
gogol-bigquery/: README.md  gogol-bigquery.cabal
gogol-bigquerydatatransfer/: README.md  gogol-bigquerydatatransfer.cabal
gogol-bigtableadmin/: README.md  gogol-bigtableadmin.cabal
gogol-billing/: README.md  gogol-billing.cabal
gogol-binaryauthorization/: README.md  gogol-binaryauthorization.cabal
gogol-blogger/: README.md  gogol-blogger.cabal
gogol-books/: README.md  gogol-books.cabal
gogol-calendar/: README.md  gogol-calendar.cabal
gogol-chat/: README.md  gogol-chat.cabal
gogol-civicinfo/: README.md  gogol-civicinfo.cabal
gogol-classroom/: README.md  gogol-classroom.cabal
gogol-cloud-billing/: README.md  gogol-cloud-billing.cabal
gogol-cloud-datastore/: README.md  gogol-cloud-datastore.cabal
gogol-cloud-debugger/: README.md  gogol-cloud-debugger.cabal
gogol-cloud-deployments/: README.md  gogol-cloud-deployments.cabal
gogol-cloud-dns/: README.md  gogol-cloud-dns.cabal
gogol-cloud-latencytest/: README.md  gogol-cloud-latencytest.cabal
gogol-cloud-logging/: README.md  gogol-cloud-logging.cabal
gogol-cloud-monitoring/: README.md  gogol-cloud-monitoring.cabal
gogol-cloud-pubsub/: README.md  gogol-cloud-pubsub.cabal
gogol-cloud-resourcemanager/: README.md  gogol-cloud-resourcemanager.cabal
gogol-cloud-resources/: README.md  gogol-cloud-resources.cabal
gogol-cloud-sqladmin/: README.md  gogol-cloud-sqladmin.cabal
gogol-cloud-storage/: README.md  gogol-cloud-storage.cabal
gogol-cloud-storage-transfer/: README.md  gogol-cloud-storage-transfer.cabal
gogol-cloud-users/: README.md  gogol-cloud-users.cabal
gogol-cloudasset/: README.md  gogol-cloudasset.cabal
gogol-clouderrorreporting/: README.md  gogol-clouderrorreporting.cabal
gogol-cloudfunctions/: README.md  gogol-cloudfunctions.cabal
gogol-cloudidentity/: README.md  gogol-cloudidentity.cabal
gogol-cloudiot/: README.md  gogol-cloudiot.cabal
gogol-cloudkms/: README.md  gogol-cloudkms.cabal
gogol-cloudmonitoring/: README.md  gogol-cloudmonitoring.cabal
gogol-cloudprivatecatalog/: gogol-cloudprivatecatalog.cabal
gogol-cloudprivatecatalogproducer/: gogol-cloudprivatecatalogproducer.cabal
gogol-cloudprofiler/: README.md  gogol-cloudprofiler.cabal
gogol-cloudscheduler/: README.md  gogol-cloudscheduler.cabal
gogol-cloudsearch/: README.md  gogol-cloudsearch.cabal
gogol-cloudshell/: README.md  gogol-cloudshell.cabal
gogol-cloudtasks/: README.md  gogol-cloudtasks.cabal
gogol-cloudtrace/: README.md  gogol-cloudtrace.cabal
gogol-commentanalyzer/: gogol-commentanalyzer.cabal
gogol-composer/: README.md  gogol-composer.cabal
gogol-compute-autoscaler/: README.md  gogol-compute-autoscaler.cabal
gogol-compute-instancegroups-manager/: README.md  gogol-compute-instancegroups-manager.cabal
gogol-compute-instancegroups-updater/: README.md  (+1 more)
(+767 files in other folders)
