name:                  gogol-core
version:               0.0.1
synopsis:              Core data types and functionality for Gogol libraries.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Core data types, functionality and serialisation primitives for
    Gogol related Google Services SDKs.
    .
    The external interface of this library is stable with respect to the
    downstream Gogol libraries, only, and as such is not suitable
    for use in non-Gogol projects.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/gogol.git

flag old-locale
    description:       Use old-locale and time < 1.5
    default:           False

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Prelude

    other-modules:

    build-depends:
          aeson      >= 0.8
        , base       >= 4.7 && < 5
        , hashable   >= 1.2
        , lens       >= 4.4
        , servant    >= 0.4.4
        , servant-client
        , text       >= 1.1
        , either
        , scientific >= 0.3

    if !impl(ghc>=7.9)
        build-depends:
              nats >= 0.1.3

    if flag(old-locale)
        build-depends:
              old-locale == 1.*
            , time       >= 1.2 && < 1.5
    else
        build-depends:
              time       >= 1.5 && < 1.6
