name:                  gogol-core
version:               0.0.1
synopsis:              Core data types and functionality for Gogol libraries.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Core data types, functionality and serialisation primitives for
    Gogol related Google Services SDKs.
    .
    The external interface of this library is stable with respect to the
    downstream Gogol libraries, only, and as such is not suitable
    for use in non-Gogol projects.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/gogol.git

flag old-locale
    description:       Use old-locale and time < 1.5
    default:           False

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Prelude

    other-modules:
          Network.Google.Data.JSON
        , Network.Google.Data.Numeric

    build-depends:
          aeson      >= 0.8
        , base       >= 4.7 && < 5
        , either
        , hashable   >= 1.2
        , http-media
        , lens       >= 4.4
        , scientific >= 0.3
        , servant    >= 0.4.4
        , servant-client
        , text       >= 1.1

    if !impl(ghc>=7.9)
        build-depends:
              nats >= 0.1.3

    if flag(old-locale)
        build-depends:
              old-locale == 1.*
            , time       >= 1.2 && < 1.5
    else
        build-depends:
              time       >= 1.5 && < 1.6

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:

    build-depends:
          amazonka
        , base
        , tasty