cabal-version:         2.2
name:                  gogol-core
version:               0.5.0
synopsis:              Core data types and functionality for Gogol libraries.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:             Copyright (c) 2015-2022 Brendan Hay
category:              Google
build-type:            Simple
extra-source-files:    README.md

description:
    Core data types, functionality and serialisation primitives for
    Gogol related Google Services SDKs.
    .
    The external interface of this library is stable with respect to the
    downstream Gogol libraries, only, and as such is not suitable
    for use in non-Gogol projects.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/gogol.git

flag old-locale
    description:       Use old-locale and time < 1.5
    default:           False

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.Google.Data.Bytes
        , Network.Google.Data.JSON
        , Network.Google.Data.Numeric
        , Network.Google.Data.Time
        , Network.Google.Prelude
        , Network.Google.Types

    build-depends:
          aeson                >= 0.8
        , attoparsec           >= 0.11.3
        , base                 >= 4.12 && < 5
        , bifunctors           >= 0.1
        , bytestring           >= 0.9
        , case-insensitive     >= 1.2
        , conduit              >= 1.3
        , dlist                >= 0.7
        , exceptions           >= 0.6
        , hashable             >= 1.2
        , http-api-data        >= 0.2
        , http-client          >= 0.5 && < 1
        , http-media           >= 0.6
        , http-types           >= 0.8.6
        , lens                 >= 4.4
        , resourcet            >= 1.1
        , scientific           >= 0.3
        , servant              >= 0.14.1
        , text                 >= 1.1
        , unordered-containers >= 0.2.5

    if flag(old-locale)
        build-depends:
              old-locale == 1.*
            , time       >= 1.2 && < 1.5
    else
        build-depends:
              time       >= 1.5

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    other-modules:

    build-depends:
          gogol-core
        , base
        , tasty
