name:                  gogol-examples
version:               0.5.0
synopsis:              Basic examples for various gogol libraries.
homepage:              https://github.com/brendanhay/gogol
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Example.Storage
        , Example.Sheets

    build-depends:
          base          >= 4.7
        , bytestring
        , conduit
        , conduit-extra
        , gogol         == 0.5.0.*
        , gogol-core
        , gogol-storage
        , gogol-sheets
        , lens
        , resourcet
        , text
        , aeson
