cabal-version:         2.2
name:                  gogol-examples
version:               0.5.0
synopsis:              Basic examples for various gogol libraries.
homepage:              https://github.com/brendanhay/gogol
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:             Copyright (c) 2015-2022 Brendan Hay
build-type:            Simple
extra-source-files:    README.md

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:
          Example.Storage
        , Example.Sheets

    build-depends:
          base          >= 4.12
        , bytestring
        , conduit
        , conduit-extra
        , gogol         == 0.5.0.*
        , gogol-core
        , gogol-storage
        , gogol-sheets
        , lens
        , resourcet
        , text
        , aeson
