name:                  gogol-acceleratedmobilepageurl
version:               0.5.0
synopsis:              Google Accelerated Mobile Pages (AMP) URL SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Retrieves the list of AMP URLs (and equivalent AMP Cache URLs) for a
    given list of public URL(s).
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AcceleratedMobilePageURL
        , Network.Google.AcceleratedMobilePageURL.Types
        , Network.Google.Resource.AcceleratedMobilePageURL.AmpURLs.BatchGet

    other-modules:
          Network.Google.AcceleratedMobilePageURL.Types.Product
        , Network.Google.AcceleratedMobilePageURL.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
