cabal-version:      2.2
name:               gogol-accessapproval
version:            0.5.0
synopsis:           Google Access Approval SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  An API for controlling access to data by Google personnel.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-accessapproval

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AccessApproval
    Network.Google.AccessApproval.Folders.ApprovalRequests.Approve
    Network.Google.AccessApproval.Folders.ApprovalRequests.Dismiss
    Network.Google.AccessApproval.Folders.ApprovalRequests.Get
    Network.Google.AccessApproval.Folders.ApprovalRequests.List
    Network.Google.AccessApproval.Folders.DeleteAccessApprovalSettings
    Network.Google.AccessApproval.Folders.GetAccessApprovalSettings
    Network.Google.AccessApproval.Folders.GetServiceAccount
    Network.Google.AccessApproval.Folders.UpdateAccessApprovalSettings
    Network.Google.AccessApproval.Organizations.ApprovalRequests.Approve
    Network.Google.AccessApproval.Organizations.ApprovalRequests.Dismiss
    Network.Google.AccessApproval.Organizations.ApprovalRequests.Get
    Network.Google.AccessApproval.Organizations.ApprovalRequests.List
    Network.Google.AccessApproval.Organizations.DeleteAccessApprovalSettings
    Network.Google.AccessApproval.Organizations.GetAccessApprovalSettings
    Network.Google.AccessApproval.Organizations.GetServiceAccount
    Network.Google.AccessApproval.Organizations.UpdateAccessApprovalSettings
    Network.Google.AccessApproval.Projects.ApprovalRequests.Approve
    Network.Google.AccessApproval.Projects.ApprovalRequests.Dismiss
    Network.Google.AccessApproval.Projects.ApprovalRequests.Get
    Network.Google.AccessApproval.Projects.ApprovalRequests.List
    Network.Google.AccessApproval.Projects.DeleteAccessApprovalSettings
    Network.Google.AccessApproval.Projects.GetAccessApprovalSettings
    Network.Google.AccessApproval.Projects.GetServiceAccount
    Network.Google.AccessApproval.Projects.UpdateAccessApprovalSettings
    Network.Google.AccessApproval.Types

  other-modules:
    Network.Google.AccessApproval.Internal.Product
    Network.Google.AccessApproval.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
