name:                  gogol-accesscontextmanager
version:               0.5.0
synopsis:              Google Access Context Manager SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    An API for setting attribute based access control to requests to GCP
    services.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AccessContextManager
        , Network.Google.AccessContextManager.Types
        , Network.Google.Resource.AccessContextManager.AccessPolicies.AccessLevels.Create
        , Network.Google.Resource.AccessContextManager.AccessPolicies.AccessLevels.Delete
        , Network.Google.Resource.AccessContextManager.AccessPolicies.AccessLevels.Get
        , Network.Google.Resource.AccessContextManager.AccessPolicies.AccessLevels.List
        , Network.Google.Resource.AccessContextManager.AccessPolicies.AccessLevels.Patch
        , Network.Google.Resource.AccessContextManager.AccessPolicies.Create
        , Network.Google.Resource.AccessContextManager.AccessPolicies.Delete
        , Network.Google.Resource.AccessContextManager.AccessPolicies.Get
        , Network.Google.Resource.AccessContextManager.AccessPolicies.List
        , Network.Google.Resource.AccessContextManager.AccessPolicies.Patch
        , Network.Google.Resource.AccessContextManager.AccessPolicies.ServicePerimeters.Create
        , Network.Google.Resource.AccessContextManager.AccessPolicies.ServicePerimeters.Delete
        , Network.Google.Resource.AccessContextManager.AccessPolicies.ServicePerimeters.Get
        , Network.Google.Resource.AccessContextManager.AccessPolicies.ServicePerimeters.List
        , Network.Google.Resource.AccessContextManager.AccessPolicies.ServicePerimeters.Patch
        , Network.Google.Resource.AccessContextManager.Operations.Cancel
        , Network.Google.Resource.AccessContextManager.Operations.Delete
        , Network.Google.Resource.AccessContextManager.Operations.Get
        , Network.Google.Resource.AccessContextManager.Operations.List

    other-modules:
          Network.Google.AccessContextManager.Types.Product
        , Network.Google.AccessContextManager.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
