cabal-version:      2.2
name:               gogol-accesscontextmanager
version:            0.5.0
synopsis:           Google Access Context Manager SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  An API for setting attribute based access control to requests to GCP services.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-accesscontextmanager

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AccessContextManager
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.Create
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.Delete
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.Get
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.List
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.Patch
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.ReplaceAll
    Network.Google.AccessContextManager.AccessPolicies.AccessLevels.TestIamPermissions
    Network.Google.AccessContextManager.AccessPolicies.Create
    Network.Google.AccessContextManager.AccessPolicies.Delete
    Network.Google.AccessContextManager.AccessPolicies.Get
    Network.Google.AccessContextManager.AccessPolicies.GetIamPolicy
    Network.Google.AccessContextManager.AccessPolicies.List
    Network.Google.AccessContextManager.AccessPolicies.Patch
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.Commit
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.Create
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.Delete
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.Get
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.List
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.Patch
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.ReplaceAll
    Network.Google.AccessContextManager.AccessPolicies.ServicePerimeters.TestIamPermissions
    Network.Google.AccessContextManager.AccessPolicies.SetIamPolicy
    Network.Google.AccessContextManager.AccessPolicies.TestIamPermissions
    Network.Google.AccessContextManager.Operations.Cancel
    Network.Google.AccessContextManager.Operations.Delete
    Network.Google.AccessContextManager.Operations.Get
    Network.Google.AccessContextManager.Operations.List
    Network.Google.AccessContextManager.Organizations.GcpUserAccessBindings.Create
    Network.Google.AccessContextManager.Organizations.GcpUserAccessBindings.Delete
    Network.Google.AccessContextManager.Organizations.GcpUserAccessBindings.Get
    Network.Google.AccessContextManager.Organizations.GcpUserAccessBindings.List
    Network.Google.AccessContextManager.Organizations.GcpUserAccessBindings.Patch
    Network.Google.AccessContextManager.Types

  other-modules:
    Network.Google.AccessContextManager.Internal.Product
    Network.Google.AccessContextManager.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
