cabal-version:      2.2
name:               gogol-adexchange-buyer
version:            0.5.0
synopsis:           Google Ad Exchange Buyer SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Accesses your bidding-account information, submits creatives for validation, finds available direct deals, and retrieves performance reports.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1.4@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-adexchange-buyer

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AdExchangeBuyer
    Network.Google.AdExchangeBuyer.Accounts.Get
    Network.Google.AdExchangeBuyer.Accounts.List
    Network.Google.AdExchangeBuyer.Accounts.Patch
    Network.Google.AdExchangeBuyer.Accounts.Update
    Network.Google.AdExchangeBuyer.BillingInfo.Get
    Network.Google.AdExchangeBuyer.BillingInfo.List
    Network.Google.AdExchangeBuyer.Budget.Get
    Network.Google.AdExchangeBuyer.Budget.Patch
    Network.Google.AdExchangeBuyer.Budget.Update
    Network.Google.AdExchangeBuyer.Creatives.AddDeal
    Network.Google.AdExchangeBuyer.Creatives.Get
    Network.Google.AdExchangeBuyer.Creatives.Insert
    Network.Google.AdExchangeBuyer.Creatives.List
    Network.Google.AdExchangeBuyer.Creatives.ListDeals
    Network.Google.AdExchangeBuyer.Creatives.RemoveDeal
    Network.Google.AdExchangeBuyer.Marketplacedeals.Delete
    Network.Google.AdExchangeBuyer.Marketplacedeals.Insert
    Network.Google.AdExchangeBuyer.Marketplacedeals.List
    Network.Google.AdExchangeBuyer.Marketplacedeals.Update
    Network.Google.AdExchangeBuyer.Marketplacenotes.Insert
    Network.Google.AdExchangeBuyer.Marketplacenotes.List
    Network.Google.AdExchangeBuyer.Marketplaceprivateauction.Updateproposal
    Network.Google.AdExchangeBuyer.PerformanceReport.List
    Network.Google.AdExchangeBuyer.PretargetingConfig.Delete
    Network.Google.AdExchangeBuyer.PretargetingConfig.Get
    Network.Google.AdExchangeBuyer.PretargetingConfig.Insert
    Network.Google.AdExchangeBuyer.PretargetingConfig.List
    Network.Google.AdExchangeBuyer.PretargetingConfig.Patch
    Network.Google.AdExchangeBuyer.PretargetingConfig.Update
    Network.Google.AdExchangeBuyer.Products.Get
    Network.Google.AdExchangeBuyer.Products.Search
    Network.Google.AdExchangeBuyer.Proposals.Get
    Network.Google.AdExchangeBuyer.Proposals.Insert
    Network.Google.AdExchangeBuyer.Proposals.Patch
    Network.Google.AdExchangeBuyer.Proposals.Search
    Network.Google.AdExchangeBuyer.Proposals.Setupcomplete
    Network.Google.AdExchangeBuyer.Proposals.Update
    Network.Google.AdExchangeBuyer.Pubprofiles.List
    Network.Google.AdExchangeBuyer.Types

  other-modules:
    Network.Google.AdExchangeBuyer.Internal.Product
    Network.Google.AdExchangeBuyer.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
